--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<blockquote class="container">
+<div class="container">
         <h1>Testimonials</h1>
         <p class="one">This product is amazing! I higly recommend it to anyone in need of a solution like this.</p>
         <p class="two"><i>- John Doe</i></p>
         <p class="three">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
         <p class="four"><i>- Jane Smith</i></p>
-</blockquote>
+</div>
 </body>
 
 </html>
