--- a/main.html
+++ b/main.html
@@ -12,10 +12,14 @@
 </script>
 <div class="container">
         <h1>Testimonials</h1>
-        <p class="one">This product is amazing! I higly recommend it to anyone in need of a solution like this.</p>
-        <p class="two"><i>- John Doe</i></p>
-        <p class="three">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
-        <p class="four"><i>- Jane Smith</i></p>
+		<div>
+			<p class="one">This product is amazing! I higly recommend it to anyone in need of a solution like this.</p>
+	        <p class="two">- John Doe</p>
+		</div>
+        <div>
+			<p class="three">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+	        <p class="four">- Jane Smith</p>
+		</div>    
 </div>
 </body>
 
